full java structure is ready

--- a/business-services/pom.xml
+++ b/business-services/pom.xml
@@ -10,6 +10,13 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>business-services</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>common</module>
+        <module>one</module>
+        <module>two</module>
+        <module>two-api</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
