--- a/platform-services/pom.xml
+++ b/platform-services/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>discovery</module>
+        <module>apigateway</module>
     </modules>
 
     <properties>
